# bitmap-vector-studio

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  latest.json  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  desktop-build.yml  docker.yml  release.yml
app_pages/: 01_Convert.py  02_Batch.py  03_History.py  04_Settings.py  __init__.py  _shared.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  main.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: make_icons.py
desktop/src-tauri/src/: commands.rs  main.rs  python_bridge.rs  updater.rs
desktop/src/components/: AdvancedDrawer.tsx  CommandPalette.tsx  ControlBar.tsx  CoreParams.tsx  DropZone.tsx  ErrorBoundary.tsx  Header.tsx  HistoryPanel.tsx  Layout.tsx  MainCanvas.tsx  MarketBrowser.tsx  ParamPanel.tsx  PluginManager.tsx  PreviewPane.tsx  QueueBar.tsx  SettingsModal.tsx  Sidebar.tsx  SmartRecommend.tsx  StatusBar.tsx  TopBar.tsx
desktop/src/components/__tests__/: ControlBar.test.tsx  CoreParams.test.tsx  MainCanvas.test.tsx  SmartRecommend.test.tsx  TopBar.test.tsx
desktop/src/hooks/: useInvoke.ts  usePresets.ts  useQueue.ts  useTauri.ts
desktop/src/i18n/: index.tsx
desktop/src/stores/: advancedStore.ts  appStore.ts  convertStore.ts  index.ts  queueStore.ts  settingsStore.ts
desktop/src/stores/__tests__/: appStore.test.ts  convertStore.test.ts  queueStore.test.ts
desktop/src/styles/: App.css  components.css  global.css
desktop/src/types/: index.ts
desktop/src/utils/: crashRecovery.ts  lazyLoad.ts  performance.ts
docs/: AI.md  ANIMATION.md  API.md  CLOUD.md  COLLABORATION.md  DESIGN_SYSTEM.md  DESKTOP.md  DOCKER.md  ENGINES.md  INSTALL.md  MARKET.md  PLUGIN.md  PROJECT_DECISION.md  ROADMAP.md  WORKFLOW.md
examples/: README.md  generate_examples.py
packaging/apt/: build-deb.sh
packaging/chocolatey/: bitmap-vector-studio.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: bitmap-vector-studio.rb
scripts/: build-desktop.bat  build-desktop.sh  bump-version.py  install-deps.sh  install.sh  package.py  release-desktop.sh  release.py  run_gui.bat  run_gui.sh  start.ps1  start.sh
src/vector_studio/: __init__.py  ai_generation.py  ai_ocr.py  ai_onnx.py  ai_simplify.py  animation.py  api.py  api_client.py  api_docs.py  audit_logger.py  auto_discovery.py  batch_rules.py  batch_template.py  cache_manager.py  checkpoint.py  cli.py  cloud_market.py  cloud_storage.py  cloud_sync.py  collaboration.py  community_tools.py  config.py  design_integration.py  engine_orchestrator.py  engines.py  enhance.py  enterprise.py  external_editors.py  gpu_backend.py  health_check.py  history.py  i18n.py  import_export.py  live_preview.py  market.py  metrics.py  migration.py  models.py  notifier.py  ocr_languages.py  (+29 more)
src/vector_studio/builtin_plugins/: __init__.py  resize_plugin.py  watermark_plugin.py
tests/: conftest.py  test_ai_generation.py  test_ai_ocr.py  test_ai_onnx.py  test_ai_simplify.py  test_animation.py  test_api.py  test_audit_logger.py  test_auto_discovery.py  test_batch_rules.py  test_batch_template.py  test_benchmark.py  test_cache_manager.py  test_checkpoint.py  test_cli.py  test_cloud_market.py  test_cloud_storage.py  test_cloud_sync.py  test_collaboration.py  test_community_tools.py  test_config.py  test_design_integration.py  test_docker.py  test_edge_cases.py  test_engine_orchestrator.py  test_engines.py  test_enhance.py  test_enterprise.py  test_external_editors.py  test_gpu_backend.py  test_health_check.py  test_history.py  test_import_export.py  test_integration.py  test_live_preview.py  test_market.py  test_metrics.py  test_migration.py  test_models.py  test_notifier.py  (+32 more)
