[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitmap-vector-studio"
version = "0.3.0"
description = "Illustrator-like bitmap/raster to SVG vector conversion studio powered by VTracer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Bitmap Vector Studio Contributors" }
]
keywords = ["svg", "vectorization", "vtracer", "bitmap", "raster-to-vector", "image-trace"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "vtracer>=0.6.15",
  "Pillow>=10.0",
  "typer>=0.12",
  "rich>=13.7",
  "streamlit>=1.35",
  "cairosvg>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
smart = [
  "numpy>=1.24",
]

[project.scripts]
vector-studio = "vector_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
